compile_error.txt
TestListExamples.java:13: error: cannot find symbol
 class LongString implements StringChecker{
                             ^
  symbol:   class StringChecker
  location: class TestListExamples
TestListExamples.java:27: error: cannot find symbol
  StringChecker sc = new LongString();
  ^
  symbol:   class StringChecker
  location: class TestListExamples
TestListExamples.java:29: error: cannot find symbol
  assertEquals(expected, ListExamples.filter(input, sc));
                         ^
  symbol:   variable ListExamples
  location: class TestListExamples
3 errors
